# npcink-ai-cloud

./: .dockerignore  .env.example  .gitignore  .gitleaks-baseline.json  .gitleaks.toml  .gitleaksignore  AGENTS.md  Dockerfile  Dockerfile.postgres  Makefile  README.md  alembic.ini  docker-compose.artifact-orphan-proof.yml  docker-compose.dev.yml  docker-compose.m4-preview.yml  docker-compose.p5-b4-query-proof.yml  docker-compose.p5-b4-runtime-proof.yml  docker-compose.pg18-proof.yml  docker-compose.prod.yml  docker-compose.runtime.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  task-contract-geo-and-routing.json  task-contract-release-readiness-cleanup-2026-07-06.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
ci/: pytest-backend-durations.json
deploy/: Caddyfile.prod  OPS_PLAYBOOK.md  PRODUCTION_GITHUB_DEPLOY.md  RELEASE_CHECKLIST.md  WORKSPACE_TARGET.md  admin-key-rotate.sh  backup-restore-drill.sh  bind-domain-to-ssh-host.sh  bootstrap-portal-site-to-ssh-host.sh  bundle-images.sh  common.sh  deploy-static-terms-to-ssh-host.sh  deploy-to-ssh-host.sh  first-install-finalize.sh  first-install-rollback.sh  install-lock.py  magick-domain-nginx.conf.template  nginx.dev.conf  nginx.m4-preview.conf  nginx.prod.conf  prepare-first-install.sh  prepare-installation-under-lock.sh  production-performance-baseline-to-ssh-host.sh  release-smoke.env.example  release-smoke.sh  remote-bootstrap-portal-site.sh  remote-env-upsert.sh  remote-load-and-up.sh  remote-migrate.sh  remote-operational-ready.sh  remote-performance-baseline.sh  remote-provider-matrix-smoke.sh  remote-provider-status.sh  remote-refresh-providers.sh  remote-runtime-config-preflight.sh  remote-seed-runtime.sh  remote-smoke.sh  remote-wp-cron.sh  runtime-data-encryption-cutover.sh  setup-code-rotate.sh  (+7 more)
docs/: admin-customer-surface-consolidation-history-2026-06-30.md  admin-portal-user-management-history-2026-06-29.md  admin-provider-management-ui-simplification-2026-06-30.md  admin-service-settings-alipay-history-2026-07-06.md  admin-service-settings-qq-open-callback-history-2026-06-29.md  admin-surface-cleanup-closeout-2026-07-02.md  ai-credit-charge-contract-v1.md  ai-generated-content-disclosure-v1.md  (+166 more)
(+801 files in other folders)
