[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npcink-ai-cloud"
version = "0.1.0"
description = "Hosted model runtime for Npcink AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135,<1.0",
  "gunicorn>=23.0,<24.0",
  "uvicorn[standard]>=0.34,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic-settings>=2.14.2,<3.0",
  "httpx>=0.28,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.2,<6.0",
  "PyJWT[crypto]>=2.13,<3.0",
  "alembic>=1.14,<2.0",
  "opentelemetry-api>=1.30,<2.0",
  "opentelemetry-sdk>=1.30,<2.0",
  "opentelemetry-exporter-otlp>=1.30,<2.0",
  "Pillow>=12.3,<13.0",
  "python-multipart>=0.0.31,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2.0",
  "pytest>=9.0.3,<10.0",
  "pytest-asyncio>=1.0,<2.0",
  "ruff>=0.11,<1.0",
]
zilliz = [
  "pymilvus>=2.4,<3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/api/routes/stats.py" = ["B008"]
"app/domain/commercial/service.py" = ["E402", "E501"]
"app/domain/commercial/mixins/_billing_mixin.py" = ["E501"]
"app/domain/commercial/mixins/_site_mixin.py" = ["E501"]
"app/domain/image_sources/service.py" = ["E501"]
"app/domain/usage/service.py" = ["E501"]
"migrations/versions/20260413_0024_plan_free_backfill.py" = ["E501"]
"tests/api/test_execution_pattern_contract.py" = ["E501"]
"tests/api/test_image_source_runtime.py" = ["E501"]
"tests/conftest.py" = ["E402"]
"tests/contract/test_security_config_contract.py" = ["E501"]
"tests/dev/test_identity_role_migration.py" = ["E501"]
"tests/domain/test_deepseek_readiness.py" = ["E501"]
"tests/domain/test_runtime_queue.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
